chore: npm publish

--- a/.release-it.json
+++ b/.release-it.json
@@ -14,7 +14,7 @@
     "requireCleanWorkingDir": false
   },
   "npm": {
-    "publish": false
+    "publish": true
   },
   "github": {
     "release": true
